[package]
name = "ytdl"
authors = ["cssivision <cssivision@gmail.com>"]
version = "0.1.2"
license = "MIT"
repository = "https://github.com/cssivision/ytdl"
homepage = "https://github.com/cssivision/ytdl"
description = "youtube download cli write in rust."
readme = "README.md"

[[bin]]
name = "ytdl"
path = "src/bin/main.rs"

[dependencies]
clippy = {version = "*", optional = true}
clap = "2.25.0"
log = "0.3.8"
env_logger = "0.4.3"
url = "1.5.1"
reqwest = "0.7.0"
lazy_static = "0.2.8"
serde_derive = "1.0.10"
serde = "1.0.10"
serde_json = "1.0.2"
pbr = "1.0.0"

[features]
default = []
